fix access image for feature property